# ssigma

./: .gitignore  ProjectHome.md  README.md  pyproject.toml  test.py
definicion/: COBERTURA_IMPLEMENTACION.md  RESUMEN_LENGUAJE_S_SIGMA.md  clean_tex.py  def.html  def.md  def.tex
examples/: README.md  copia_y_salto.code  fibonacci.code  input_ejemplo.code  mi_suma.macros  mult_macro.code  palabras.code  primo.code  print_ejemplo.code  prog_con_include.code  resta_macro.code  restapunto.code  solo_numericos.code  std.macros  suma_macro.code
scripts/: publish_pypi.sh
ssigma/: __init__.py  cli.py  ejecutor.py  exceptions.py  infinitupla.py  macros.py  maquina.py  parser.py  programa.py
ssigma/instrucciones/: __init__.py  base.py  numericas.py  palabras.py
ssigma/parser/: __init__.py  macro_def_parser.py  parser.py  patrones.py
tests/: __init__.py  test_ejemplos.py  test_exceptions.py  test_infinitupla.py  test_instrucciones.py  test_macros.py  test_maquina_ejecutor.py  test_parser.py  test_programa.py
trunk/: README.md  infinitupla.py  instruccion.py  programa.py  test.py
trunk/examples/: devuelveunoconh.code
trunk/ssigma/: instrucciones.py  maquina.py  programa.py
trunk/trunk/: parser.py  test.py
