[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssigma"
version = "0.1.0"
description = "Implementación en Python del lenguaje S^Σ (paradigma imperativo de Neumann)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Pablo" }
]
keywords = ["language", "interpreter", "imperative", "sigma", "theory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "twine>=4",
    "build>=0.10",
]

[project.scripts]
ssigma = "ssigma.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssigma*"]
